--- a/index.html
+++ b/index.html
@@ -1,6 +1,35 @@
+<!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <meta charset="utf-8" />
+    <title>计算机网络应用基础（第3版）第三轮复习资料</title>
+    <link rel="stylesheet" href="./jquery/jquery.mobile-1.0.min.css" />
+    <script type="text/javascript" src="./jquery/jquery-1.6.4.min.js">
+    </script>
+    <script type="text/javascript" src="./jquery/jquery.mobile-1.0.min.js">
+    </script>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+  </head>
+  
   <body>
-  hllow word
+    <div data-role="page" id="home">
+      <div data-role="header">
+        <h1>网络第三轮复习</h1>
+      </div>
+      
+      <div data-role="content">
+        <div data-role="controlgroup">
+          <a href="project1.html" target="_self" data-role="button">项目一 初探计算机网络</a>
+          <a href="project2.html" target="_self" data-role="button">项目二 走进局域网</a>
+          <a href="project3.html" target="_self" data-role="button">项目三 畅游因特网</a>
+          <a href="project4.html" target="_self" data-role="button">项目四 保障网络安全</a>
+          <a href="project5.html" target="_self" data-role="button">项目五 编写HTML代码</a>          
+        </div>
+	  </div>
+      
+      <div data-role="footer" data-position="fixed">
+        <h4>版权所有 <a href="mailto://wangtaobz@foxmail.com?subject=网络第3版"><img src="Tianjin.png" width=28px height=28px align="middle" /></a> &copy;素年子山</h4>
+      </div>
+    </div>
   </body>
 </html>
