--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	  </div>
       
       <div data-role="footer" data-position="fixed">
-        <h4>版权所有 <a href="mailto://wangtaobz@foxmail.com?subject=网络第3版"><img src="/js/sunian.png" width="28px" height="28px" align="middle" /></a> &copy;素年子山</h4>
+        <h4>版权所有 <a href="mailto://wangtaobz@foxmail.com?subject=网络第3版"><img src="sunian.png" width="28px" height="28px" align="middle" /></a> &copy;素年子山</h4>
       </div>
     </div>
   </body>
