--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>计算机网络应用基础（第3版）第三轮复习资料</title>
-    <link rel="stylesheet" href="./jquery/jquery.mobile-1.0.min.css" />
+    <link rel="stylesheet" type="text/css" href="./jquery/jquery.mobile-1.0.min.css" />
     <script type="text/javascript" src="./jquery/jquery-1.6.4.min.js">
     </script>
     <script type="text/javascript" src="./jquery/jquery.mobile-1.0.min.js">
