--- a/project2.html
+++ b/project2.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>项目二 走进局域网</title>
-    <link rel="stylesheet" href="./jquery/jquery.mobile-1.0.min.css" />
-    <script type="text/javascript" src="./jquery/jquery-1.6.4.min.js">
+    <link rel="stylesheet" href="jQuery/jquery.mobile-1.0.min.css" />
+    <script type="text/javascript" src="jQuery/jquery-1.6.4.min.js">
     </script>
-    <script type="text/javascript" src="./jquery/jquery.mobile-1.0.min.js">
+    <script type="text/javascript" src="jQuery/jquery.mobile-1.0.min.js">
     </script>
     <style type="text/css">
       form{
