--- a/project4.html
+++ b/project4.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>项目四 保障网络安全</title>
-    <link rel="stylesheet" href="./jquery/jquery.mobile-1.0.min.css" />
-    <script type="text/javascript" src="./jquery/jquery-1.6.4.min.js">
+    <link rel="stylesheet" href="jQuery/jquery.mobile-1.0.min.css" />
+    <script type="text/javascript" src="jQuery/jquery-1.6.4.min.js">
     </script>
-    <script type="text/javascript" src="./jquery/jquery.mobile-1.0.min.js">
+    <script type="text/javascript" src="jQuery/jquery.mobile-1.0.min.js">
     </script>
     <style type="text/css">
       form{
@@ -417,7 +417,7 @@
       </div>
       
       <div data-role="footer" data-theme="b" data-position="fixed">
-        <h4>版权所有 <img src="Tianjin.png" width=28px height=28px align="middle" /> &copy;素年子山</h4>
+        <h4>版权所有 <img src="Tianjin.png" width="28px" height="28px" align="middle" /> &copy;素年子山</h4>
       </div>
     </div>
   </body>
