--- a/project3.html
+++ b/project3.html
@@ -510,7 +510,7 @@
       </div>
       
       <div data-role="footer" data-theme="b" data-position="fixed">
-        <h4>版权所有 <img src="Tianjin.png" width="28px" height="28px" align="middle" /> &copy;素年子山</h4>
+        <h4>版权所有 <img src="sunian.png" width="28px" height="28px" align="middle" /> &copy;素年子山</h4>
       </div>
     </div>
   </body>
