--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   
   <body>
+<script>
+	alert('因QQ微信的默认预览功能不齐全（无法做题）推荐打开后右上角在浏览器中打开')
+</script>
     <div data-role="page" id="home">
       <div data-role="header">
         <h1>网络第三轮复习</h1>
